@@ -1,7 +1,10 @@
 [b]Version 0.6.0rc1 (not released yet)[/b]:
 
+(2008-01-18)
+ * "Help->Command line options" now shows an html text, so it looks better.
+
 (2008-01-17)
- * Added Help->Command line options, which shows a text with help about
+ * Added "Help->Command line options", which shows a text with help about
    the available command line options. It displays the same as smplayer -h
    but it will useful for Windows users, as smplayer -h doesn't work for 
    them.
